@@ -30,7 +30,6 @@
                         <includeLayerTools>false</includeLayerTools>
                     </layers>
                     <arguments>
-                        <argument>--illegal-access=permit</argument>
                         <argument>--add-opens java.base/java.net=ALL-UNNAMED</argument>
                         <argument>--add-opens=java.base/sun.net.www.protocol.jar=ALL-UNNAMED</argument>
                     </arguments>
@@ -332,6 +331,12 @@
             <artifactId>reflections</artifactId>
             <groupId>org.reflections</groupId>
             <version>0.10.2</version>
+        </dependency>
+
+        <dependency>
+            <artifactId>jcl-core</artifactId>
+            <groupId>org.xeustechnologies</groupId>
+            <version>2.8</version>
         </dependency>
 
         <dependency>
